[crp] Chore: sonar issues